--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 RBCNumberSpeaker.xcworkspace/
 RBCNumberSpeakerDemo/RBCNumberSpeakerDemo.xcodeproj/xcuserdata/
-RBCNumberSpeakerTests/RBCNumberSpeakerTests.xcodeproj/
+RBCNumberSpeakerTests/RBCNumberSpeakerTests.xcodeproj/xcuserdata/
