--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-RBCNumberSpeaker.xcworkspace/
+RBCNumberSpeaker.xcworkspace/xcuserdata/
 RBCNumberSpeakerDemo/RBCNumberSpeakerDemo.xcodeproj/xcuserdata/
 RBCNumberSpeakerTests/RBCNumberSpeakerTests.xcodeproj/xcuserdata/
